--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "knex": "^0.20.10",
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
+    "treeize": "^2.1.2",
     "winston": "^3.2.1",
     "xss": "^1.0.6"
   },
