--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.642.0",
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -25,8 +26,12 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.10",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "path": "^0.12.7",
     "pg": "^7.18.2",
     "treeize": "^2.1.2",
+    "url": "^0.11.0",
     "winston": "^3.2.1",
     "xss": "^1.0.6"
   },
